# iaa-inference-attention-architecture

./: CONTRIBUTING.md  LICENSE.md  README.md
data/: .env.example  .gitignore  Dockerfile  Makefile  README.md  activation_patching.py  attribution_patching.py  causal_tracing.py  causal_utils.py  eat_score.py  head_attribution.py.  integrated_pipeline.py  path_patching.py  pyproject.toml  requirements-dev.txt  requirements.txt  semantic-density.py  semantic_density_llm.py  setup.py  test_eat_score.py
docs/: MANUAL_COMPLETO.md
eat-lab-notebooks/: 00_setup_and_installation.ipynb  01_semantic_density_basics.ipynb  02_causal_tracing_tutorial.ipynb  04_eat_score_complete.ipynb  05_prompt_optimization_lab.ipynb  06_research_experiments.ipynb  README.md  requirements-minimal.txt
examples/: EIA_EXPERIMENT_01.md
