[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eat-lab-framework"
version = "3.0.0"
description = "Framework completo para análise semântica e causal de LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "EAT-Lab Collaborative", email = "contact@eat-lab.org"}
]
keywords = ["nlp", "transformers", "interpretability", "semantic-analysis", "causal-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0,<2.3.0",
    "transformers>=4.35.0,<5.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "networkx>=3.1,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.4.0",
]

minimal = [
    "torch>=2.0.0,<2.3.0",
    "transformers>=4.35.0,<5.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
]

all = [
    "eat-lab-framework[dev]",
    "wandb>=0.15.0",
    "mlflow>=2.7.0",
    "optuna>=3.4.0",
    "plotly>=5.17.0",
]

[project.urls]
Homepage = "https://github.com/eat-lab/framework"
Documentation = "https://eat-lab.readthedocs.io"
Repository = "https://github.com/eat-lab/framework"
Changelog = "https://github.com/eat-lab/framework/blob/main/CHANGELOG.md"

[project.scripts]
eat-score = "eat_lab.cli:main_score"
eat-trace = "eat_lab.cli:main_trace"
eat-density = "eat_lab.cli:main_density"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=eat_lab --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/eat_lab"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
